syntax = "proto3";

option go_package = "tio.control.v1";

enum JobStatus {
    BuildSucc = 0;
    BuildFailed = 1;
    BuildIng = 2;
}

message BuildStatus {
    string user = 1;
    string name = 2;
    string image = 3;
    string api = 4;
    int32 rate = 5;
    string raw = 6;
    JobStatus status = 7;
    int32 sid = 8;
}

message BuildReply {
    int32 code = 1;
    string msg = 2;
}

service ControlService {
    rpc UpdateBuildStatus (BuildStatus) returns (BuildReply) {
    }

    rpc GetBuildStatus (BuildStatus) returns (BuildReply) {
    }
}
